--- a/main_file.tex
+++ b/main_file.tex
@@ -23,7 +23,7 @@
 
 \title{\textbf{\large Ordonnancement sous contraintes d'énergie}}
 \author{Margaux NATTAF}
-\defencedate{30/09/2016}
+\defencedate{18/10/2016}
 \lab{Laboratoire d'Analyse et d'Architecture des Système (LAAS)}
 
 
@@ -50,9 +50,12 @@
 \makeflyleaf
 \doparttoc
 \tableofcontents
+
+\thispagestyle{empty}
+
 \listoffigures
 \listoftables
-\listofalgorithms
+%\listofalgorithms
 \input{part1/chap1.tex}
 \input{part2/PPC.tex}
 \input{part3/PLNE.tex}
