--- a/part3/RCPSP/PL.tex
+++ b/part3/RCPSP/PL.tex
@@ -1,7 +1,7 @@
 %!TeX root =../main_file.tex
 
 \section{La programmation linéaire en nombres entiers}
-
+\label{sec:PLNE}
 Dans ce paragraphe, nous présentons les concepts de base de la
 programmation linéaire ainsi que les notions et outils qui seront
 utilisés dans la suite de cette partie. Cette présentation n'étant que
