--- a/part2/CECSP/time_filter.tex
+++ b/part2/CECSP/time_filter.tex
@@ -231,8 +231,8 @@ et décrite dans la figure~\ref{fig:fonct_CECSP}
 \begin{tikzpicture}
 [xscale=0.8,yscale=0.56]
 \node (O) at (1,2) {};
-\draw[->] (1,2) -- (5.5,2);
-\draw[->] (1,2) -- (1,8);
+\draw[->] (1,2) -- (5.5,2) node[below] {$b_j(t)$};
+\draw[->] (1,2) -- (1,8)  node[left] {$f_j(b_j(t))$};
 
 \path[draw] (2,4) -- (3,6) -- (4,7) ;
 
@@ -275,7 +275,7 @@ figure~\ref{fig:disj_CECSPc}).
       (9.5,5.8) -- (9.5,3.8) -- cycle;
       \draw[white, pattern=north west lines] (6.4,0) rectangle (9.5,8);
 
-      \draw[->] (0,0) -- (14,0);
+      \draw[->] (0,0) -- (14,0) node[below] {$t$};
       \draw[->] (0,0) -- (0,8) ;
       \draw (0,3) node[left] {$R=3$};
       \draw[densely dotted] (1,-0.1) -- (1,8) node[above] {$\ES[j]$};
@@ -304,7 +304,7 @@ figure~\ref{fig:disj_CECSPc}).
       {$j$};
       \draw[white, pattern=north west lines] (7,0) rectangle (8,8);
 
-      \draw[->] (0,0) -- (14,0);
+      \draw[->] (0,0) -- (14,0) node[below] {$t$};
       \draw[->] (0,0) -- (0,8) ;
       \draw (0,3) node[left] {$R=3$};
       \draw[densely dotted] (1,-0.1) -- (1,8) node[above] {$\ES[j]$};
@@ -334,7 +334,7 @@ figure~\ref{fig:disj_CECSPc}).
       \draw[fill=white] (6,3.8) rectangle (13,7.8) node[midway]
       {$j$};
 
-      \draw[->] (0,0) -- (14,0);
+      \draw[->] (0,0) -- (14,0) node[below] {$t$};
       \draw[->] (0,0) -- (0,8) ;
       \draw (0,3) node[left] {$R=3$};
       \draw[densely dotted] (1,-0.1) -- (1,8) node[above] {$\ES[j]$};
@@ -484,7 +484,7 @@ ne peut commencer avant $\EE$.
         \draw[fill=black!70!] (3.9,3.2) rectangle
         (10,3.8) node[midway,white] {$\mathbf{moi_i}$};
 
-      \draw[->] (0,0) -- (14,0);
+      \draw[->] (0,0) -- (14,0) node[below] {$t$};
       \draw[->] (0,0) -- (0,8) ;
       \draw (0,3) node[left] {$R=3$};
       \draw[densely dotted] (2,-0.1) -- (2,8) node[above] {$\ES[j]$};
@@ -515,7 +515,7 @@ ne peut commencer avant $\EE$.
         (10,3.8) node[midway,white] {$\mathbf{moi_i}$};
 
       
-      \draw[->] (0,0) -- (14,0);
+      \draw[->] (0,0) -- (14,0) node[below] {$t$};
       \draw[->] (0,0) -- (0,8) ;
       \draw (0,3) node[left] {$R=3$};
       \draw[densely dotted] (2,-0.1) -- (2,8) node[above] {$\ES[j]$};
@@ -547,7 +547,7 @@ ne peut commencer avant $\EE$.
       \draw[fill=black!70!] (3.9,3.2) rectangle
         (10,3.8) node[midway,white] {$\mathbf{moi_i}$};
 
-      \draw[->] (0,0) -- (14,0);
+      \draw[->] (0,0) -- (14,0) node[below] {$t$};
       \draw[->] (0,0) -- (0,8) ;
       \draw (0,3) node[left] {$R=3$};
       \draw[densely dotted] (4,-0.1) -- (4,8) node[above] {$\ES[j]$};
@@ -632,7 +632,7 @@ capacité $3$ suivante:
       \draw[fill=white] (5,4) rectangle (14,6) node[midway]
       {$j$};
       
-      \draw[->] (0,0) -- (21,0);
+      \draw[->] (0,0) -- (21,0) node[below] {$t$};
       \draw[->] (0,0) -- (0,5.5) ;
        \draw[thick] (0,3)  node[left] {$R=3$} -- (20,3);
        % \draw[densely dotted] (6,-0.1) -- (6,5.5) node[above] {$\ES[j]^{'}$};
