--- a/part2/CuSP/PPC_CuSP.tex
+++ b/part2/CuSP/PPC_CuSP.tex
@@ -1,6 +1,8 @@
 \chapter{Programmation par
   contraintes et ordonnancement cumulatif}
 \chaptermark{L'ordonnancement cumulatif en PPC}
+\label{sec:PPC_CUSP}
+
  \input{part2/CuSP/PPC.tex}
  \input{part2/CuSP/cumulative.tex}
 \input{part2/CuSP/conclusion2.tex}
