--- a/main_file.tex
+++ b/main_file.tex
@@ -61,7 +61,9 @@
 \input{part3/PLNE.tex}
 \input{part4/expe.tex}
 
-
 \bibliographystyle{alpha}
 \bibliography{main_file}
+
+
+\input{annexe/Annexe.tex}
 \end{document}
