--- a/part1/conclusion.tex
+++ b/part1/conclusion.tex
@@ -1,7 +1,7 @@
 
-\section{Conclusion}
+\chapter*{Conclusion}
 
-Dans ce chapitre, nous avons introduit les principales
+Dans cette partie, nous avons introduit les principales
 caractéristiques des problèmes d'ordonnancement avant de nous
 intéresser en particulier aux problèmes cumulatifs. Nous avons ensuite
 présenté deux des principaux problèmes étudiés en ordonnancement sous
