--- a/part2/CECSP/ER_filter.tex
+++ b/part2/CECSP/ER_filter.tex
@@ -589,6 +589,7 @@ Et ceci nous donne l'expression de $\bb$ suivante:
   \bb= 
   \max \left\{b_i^{min} \frac{\wb}{f_i(b_i^{min})},
     \max_{ p \in \P_i} \left(\frac{1}{a_{ip}}(\wb-|I|c_{ip})\right)\right\}
+\label{eq:conv_CECSP}
 \end{equation}
 Dans le cas où $\bmin=0$, nous avons: 
 \[
