--- a/part2/CECSP/tabularLS.tex
+++ b/part2/CECSP/tabularLS.tex
@@ -25,14 +25,21 @@
                                                                     -\ES
                                                                     )$}\\ 
       \hline 
-      \rotatebox{-90}{$t_2 > \smax$  }&\rotatebox{-90}{$ t_2 \ge \ES
+      \rotatebox{-90}{$t_2 > \smax$  }&\rotatebox{-90}{$ \emin \ge t_2 > \ES
                                         \lor t_2 \ge \ES + W_i/f_i(\bmin)$}
-                                                                  & \rotatebox{-90}{$\emin < t_2 < \ES + W_i/f_i(\bmin)$} &
+                                                                  &
+                                                                    \rotatebox{-90}{$\emin
+                                                                    <
+                                                                    t_2
+                                                                    \lor
+                                                                    t_2 < \ES + W_i/f_i(\bmin)$} &
                                                                                                                             \rotatebox{-90}{$t_2
                                                                                                                             \ge
                                                                                                                             \LE
                                                                                                                             \lor
-                                                                                                                            t_2
+                                                                                                                            \ES
+                                                                                                   <
+                                                                                                   t_2
                                                                                                                             \le
                                                                                                                             \emin$}
                                                                   & \rotatebox{-90}{$t_2 < \LE \lor t_2 > \emin  $}\\
