--- a/part2/PPC.tex
+++ b/part2/PPC.tex
@@ -58,7 +58,7 @@
       Afin d'assurer la cohérence du manuscrit et par souci de
       longueur, certains travaux préliminaires ne sont pas présentés
       dans ce manuscrit. C'est le cas, par exemple, du modèle de PPC
-      pour le \CECSP à temps discret présenté
+      pour le \CECSP~à temps discret présenté
       dans~\cite{Nattaf_JFPC}. Pour plus de précisions, nous invitons
       le lecteur à se référer à l'annexe~\ref{ann:JFPC}.
  }
@@ -71,3 +71,4 @@
 
 \input{part2/CuSP/PPC_CuSP.tex}
 \input{part2/CECSP/PPC_CECSP.tex}
+\input{part2/conclusion.tex}
