--- a/part3/CECSP/conclusion.tex
+++ b/part3/CECSP/conclusion.tex
@@ -1,8 +1,8 @@
-\chapter*{Conclusion}
+\section*{Conclusion}
 
 Dans ce chapitre, nous avons présenté des modèles de programmation
-linéaire en nombres entiers pour le problème du \RCPSP~ et pour le
-\CECSP. Pour chacun de ces problèmes, trois modèles sont présentés,
+linéaire en nombres entiers pour le \CECSP. Pour ce problème, trois
+modèles sont présentés,  
 un modèle utilisant une discrétisation de l'horizon de temps et deux
 modèles basés sur une représentation des événements pertinents du
 problème. 
