--- a/part3/RCPSP/PLNE_RCPSP.tex
+++ b/part3/RCPSP/PLNE_RCPSP.tex
@@ -8,8 +8,5 @@ mis en place pour le problème d'ordonnancement de projet sous
 contraintes de ressource. 
 
 \input{part3/RCPSP/modele_RCPSP.tex}
-~
+\input{part3/RCPSP/conclusion.tex}
 
-
-Le chapitre suivant est consacré à la présentation des modèles de
-programmation linéaire mixtes pour le \CECSP.
